14-kubernetes-03-configMap/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prod
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - port: 9000
      name: backend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      name: frontend
